force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Accrual_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Calculation_Method__c</fullName>
    <description>Specifies the calculation method used for this tactic.</description>
    <inlineHelpText>Select a method.
            * Dynamic: Multiplies the accrual amount by the actual daily volume.
            * Lump Sum (Effective Date): Allocates the entire accrual amount to the start date of the accrual rule measure, defined in the KPI definition time scope.
            * Lump Sum (Equal Daily Distribution): Distributes the accrual amount equally across a defined date range.</inlineHelpText>
    <label>Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dynamic</fullName>
            </value>
            <value>
                <fullName>LumpSum_EffectiveDate</fullName>
                <label>LumpSum (Effective Date)</label>
            </value>
            <value>
                <fullName>LumpSum_EqualDayDistribution</fullName>
                <label>LumpSum (Equal Day Distribution)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>