force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Accrual_Input_Measure__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Input_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the KPI that holds the actual volume or quantity used in the dynamic accrual calculation method.</description>
    <inlineHelpText>The records of this measure are matched against dynamic accrual rules. The match is based on account, product, measure code, and time. Only daily measure real values are allowed.</inlineHelpText>
    <label>Accrual Input Measure</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Accrual Rule Input Measures</relationshipLabel>
    <relationshipName>AccrualRuleInputMeasures</relationshipName>
    <type>Lookup</type>
</CustomField>