force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Accrual_Input_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Input_Measure_Code__c</fullName>
    <description>Accrual Input Measure Code</description>
    <formula>cgcloud__Accrual_Input_Measure__r.cgcloud__Data_Source_Measure_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual Input Measure Code</label>
    <type>Text</type>
</CustomField>