force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Accrual_Output_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Output_Code__c</fullName>
    <description>Measure code to identify accruals by tactic type.</description>
    <inlineHelpText>Measure code to identify accruals by tactic type (for example display vs. price reduction).</inlineHelpText>
    <label>Accrual Output Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>