force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Accrual_Rule_Measure__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Rule_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Measure used to calculate accrual amounts at the product level for this tactic.</description>
    <inlineHelpText>Measure used to calculate accrual amounts at the product level for this tactic.</inlineHelpText>
    <label>Accrual Rule Measure</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Accrual Rule Measures</relationshipLabel>
    <relationshipName>AccrualRuleMeasures</relationshipName>
    <type>Lookup</type>
</CustomField>