force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Accrual_Rule_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Rule_Measure_Code__c</fullName>
    <description>Accrual Rule Measure Code</description>
    <formula>cgcloud__Accrual_Rule_Measure__r.cgcloud__Storage_Options_Measure_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual Rule Measure Code</label>
    <type>Text</type>
</CustomField>