force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Accrual_Rule_Measure_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Rule_Measure_Name__c</fullName>
    <description>Accrual Rule Measure Name</description>
    <formula>cgcloud__Accrual_Rule_Measure__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual Rule Measure Name</label>
    <type>Text</type>
</CustomField>