force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Accrual_Rule_Time_Granularity__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Accrual_Rule_Time_Granularity__c</fullName>
    <description>Specifies how KPI values are split for accrual calculations.</description>
    <inlineHelpText>* Total: Uses the total KPI value for the tactic product time frame.
        * Period: Splits KPI value for the tactic product by week or period, to generate an accrual rule out of the total value on tactic product level or generate a value by period on the tactic product level.</inlineHelpText>
    <label>Accrual Rule Time Granularity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>