force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Additional_Condition_KPI_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_Condition_KPI_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to additional KPI Definition 1 for Condition</description>
    <label>Additional Condition KPI 1</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Tactic Templates (Additional Condition KPI 1)</relationshipLabel>
    <relationshipName>Tactic_Templates_1</relationshipName>
    <type>Lookup</type>
</CustomField>