force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Additional_Condition_KPI_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_Condition_KPI_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to additional KPI Definition 2 for Condition</description>
    <label>Additional Condition KPI 2</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Tactic Templates (Additional Condition KPI 2)</relationshipLabel>
    <relationshipName>Tactic_Templates_2</relationshipName>
    <type>Lookup</type>
</CustomField>