force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Additional_Condition_KPI_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_Condition_KPI_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to additional KPI Definition 3 for Condition</description>
    <label>Additional Condition KPI 3</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Tactic Templates (Additional Condition KPI 3)</relationshipLabel>
    <relationshipName>Tactic_Templates_3</relationshipName>
    <type>Lookup</type>
</CustomField>