force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Claim_Overspend_Threshold_Percentage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Claim_Overspend_Threshold_Percentage__c</fullName>
    <description>The maximum percentage that a tactic&apos;s claim amount can exceed the accrued amount.</description>
    <inlineHelpText>The maximum percentage that a tactic&apos;s claim amount can exceed the accrued amount.</inlineHelpText>
    <label>Claim Overspend Threshold (in percent)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>