force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Condition_Change_Rule__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Change_Rule__c</fullName>
    <description>Determines the rule to handle past conditions.</description>
    <inlineHelpText>Defines the rule to handle past conditions.</inlineHelpText>
    <label>Condition Change Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>finish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>