force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Condition_Creation_Definition_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Creation_Definition_Level__c</fullName>
    <description>Defines which configuration is used to create conditions out of tactics.</description>
    <inlineHelpText>Defines if tactics of this type generate conditions based on their template or based on their own configuration.</inlineHelpText>
    <label>Condition Creation Definition Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tactic</fullName>
            </value>
            <value>
                <fullName>TacticTemplate</fullName>
                <label>Tactic Template</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>