force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Condition_Product_Group_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Product_Group_Level__c</fullName>
    <description>Specifies the product level at which the condition can be set.</description>
    <inlineHelpText>Defines the product level at which the condition is created.</inlineHelpText>
    <label>Condition Product Group Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Flavor</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>