force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Condition_Source_Kpi__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Source_Kpi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to a KPI Definition</description>
    <inlineHelpText>Defines the KPI value which will be used to create the conditions.</inlineHelpText>
    <label>Condition Source KPI</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Tactic Templates</relationshipLabel>
    <relationshipName>Tactic_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>