force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Condition_Source_Kpi_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Source_Kpi_Name__c</fullName>
    <description>KPI Source Definition Name</description>
    <formula>cgcloud__Condition_Source_Kpi__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Condition Source Kpi Name</label>
    <type>Text</type>
</CustomField>