force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Default_Lift_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Lift_Type__c</fullName>
    <label>Default Lift Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cgcloud__Possible_Lift_Types__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Absolute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>