force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Display_KPI_Subset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_KPI_Subset__c</fullName>
    <description>Subset of kpis that are displayed in the Spend Planning Card</description>
    <inlineHelpText>Defines the subset of KPIs that are displayed in the Spend Planning Card.</inlineHelpText>
    <label>Display KPI Subset in SPC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>SPC</fullName>
                <default>true</default>
                <label>SPC</label>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>VPC</fullName>
            </value>
            <value>
                <fullName>PromotionScenarios</fullName>
                <label>Promotion Scenarios</label>
            </value>
            <value>
                <fullName>SPCLumpSum</fullName>
            </value>
            <value>
                <fullName>SPCPR</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>