force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Enable_Duplicate_Manual_Inputs__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Duplicate_Manual_Inputs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the manual input is copied when creating a duplicate tactic.</description>
    <inlineHelpText>Indicates wether a tactic template using this template will have it&apos;s manual inputs copied when duplicating it.</inlineHelpText>
    <label>Copy Manual input</label>
    <type>Checkbox</type>
</CustomField>