force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Is_Accruals_Enabled__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Accruals_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables accruals for this tactic template.</description>
    <inlineHelpText>Enables accruals for tactics linked to this tactic template.</inlineHelpText>
    <label>Enable Accruals</label>
    <type>Checkbox</type>
</CustomField>