force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Number_Of_TT_Cond_Creation_Def__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number_Of_TT_Cond_Creation_Def__c</fullName>
    <label>Number of Tactic Temp Cond Creation Def</label>
    <summaryForeignKey>cgcloud__Tactic_Template_Cond_Creation_Def__c.cgcloud__Tactic_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>