force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Order_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if the tactic is relevant for orders.</inlineHelpText>
    <label>Order Relevant</label>
    <type>Checkbox</type>
</CustomField>