force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Should_Check_Claim_Overspend__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Should_Check_Claim_Overspend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activates a check on claim closure to ensure sufficient funds are accrued to cover costs for each tactic linked to  the claim. If not, the claim closure is rejected.</description>
    <inlineHelpText>Activates a check on claim closure to ensure sufficient funds are accrued to cover costs for each tactic linked to  the claim. If not, the claim closure is rejected. Make sure you enable this check even on the claim template.</inlineHelpText>
    <label>Check Claim Overspend</label>
    <type>Checkbox</type>
</CustomField>