force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Tactic_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Total_Amount__c</fullName>
    <description>This field contains the api name of the Tactic field which should provide total amount for a tactic to be used in progress bar or other functional process. Pick list uses translated values</description>
    <inlineHelpText>Defines the tactic field which provides total amount for a tactic.</inlineHelpText>
    <label>Tactic Total Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan_Spend__c</fullName>
                <default>true</default>
                <label>Plan Spend</label>
            </value>
            <value>
                <fullName>LE_Spend__c</fullName>
                <label>LE Spend</label>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>