force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Tactic_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Type__c</fullName>
    <description>Specifies the type of a tactic</description>
    <inlineHelpText>Specifies the type of a tactic</inlineHelpText>
    <label>Tactic Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Display</fullName>
                <default>true</default>
                <label>Display</label>
            </value>
            <value>
                <fullName>DisplayPerAbs</fullName>
            </value>
            <value>
                <fullName>PriceReduction</fullName>
            </value>
            <value>
                <fullName>PriceReductionPerAbs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>