force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Target_Tactic_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target_Tactic_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Tactic Template</label>
    <referenceTo>cgcloud__Tactic_Template__c</referenceTo>
    <relationshipLabel>Tactic Templates</relationshipLabel>
    <relationshipName>Target_Tactic_Template</relationshipName>
    <type>Lookup</type>
</CustomField>