force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__UI_Contract__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__UI_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contract associated with a template</description>
    <label>UI Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__UI_Contract__c.cgcloud__Usage__c</field>
            <operation>equals</operation>
            <value>Tactic</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__UI_Contract__c</referenceTo>
    <relationshipLabel>Tactic Templates</relationshipLabel>
    <relationshipName>Tactic_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>