force-app/main/default/objects/cgcloud__Tactic_Template__c/fields/cgcloud__Use_Accrual_Output_For_Fund_Liability__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Accrual_Output_For_Fund_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Calculate liabilities for Tactic Fund and Tactic records using accrual outputs</description>
    <inlineHelpText>Calculate liabilities for Tactic Fund and Tactic records using accrual outputs</inlineHelpText>
    <label>Use accrual output for fund liability</label>
    <type>Checkbox</type>
</CustomField>