force-app/main/default/objects/cgcloud__Tactic_Template__c/validationRules/cgcloud__CheckClaimOverspendThreshold.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__CheckClaimOverspendThreshold</fullName>
    <active>true</active>
    <description>Requires users to enter a claim overspend threshold when Check Claim Overspend is enabled.</description>
    <errorConditionFormula>AND(
    cgcloud__Should_Check_Claim_Overspend__c = TRUE,
    ISBLANK(cgcloud__Claim_Overspend_Threshold_Percentage__c)
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Claim_Overspend_Threshold_Percentage__c</errorDisplayField>
    <errorMessage>Enter the claim overspend threshold percentage if Check Claim Overspend is enabled.</errorMessage>
</ValidationRule>