force-app/main/default/objects/cgcloud__Tactic_Template__c/validationRules/cgcloud__ConditionCreationOn_ChangeRuleNotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__ConditionCreationOn_ChangeRuleNotEmpty</fullName>
    <active>true</active>
    <description>Condition Change Rule field cannot be empty if Enable Condition Creation is selected.</description>
    <errorConditionFormula>AND(
        NOT(ISPICKVAL(cgcloud__Condition_Creation_Definition_Level__c , &apos;tactic&apos;)),
        cgcloud__Enable_Condition_Creation__c = true,
        ISBLANK(TEXT(cgcloud__Condition_Change_Rule__c))
        )</errorConditionFormula>
    <errorDisplayField>cgcloud__Condition_Change_Rule__c</errorDisplayField>
    <errorMessage>Condition Change Rule field cannot be empty if Enable Condition Creation is selected</errorMessage>
</ValidationRule>