force-app/main/default/objects/cgcloud__Tactic_Template__c/validationRules/cgcloud__ConditionCreationOn_ProductGroupNotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__ConditionCreationOn_ProductGroupNotEmpty</fullName>
    <active>true</active>
    <description>Condition Product Group Level field cannot be empty if Enable Condition Creation is selected.</description>
    <errorConditionFormula>AND(
        NOT(ISPICKVAL(cgcloud__Condition_Creation_Definition_Level__c , &apos;tactic&apos;)),
        cgcloud__Enable_Condition_Creation__c = true,
        ISBLANK(TEXT(cgcloud__Condition_Product_Group_Level__c)))</errorConditionFormula>
    <errorDisplayField>cgcloud__Condition_Product_Group_Level__c</errorDisplayField>
    <errorMessage>Condition Product Group Level field cannot be empty if Enable Condition Creation is selected</errorMessage>
</ValidationRule>