force-app/main/default/objects/cgcloud__Tactic_Template__c/validationRules/cgcloud__ConditionSourceKPI_BoMScope.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__ConditionSourceKPI_BoMScope</fullName>
    <active>true</active>
    <description>The BOM Scope of Condition Source KPI must contain &apos;Product&apos;</description>
    <errorConditionFormula>AND( cgcloud__Enable_Condition_Creation__c, NOT( ISBLANK(cgcloud__Condition_Source_Kpi__c)), NOT(INCLUDES(cgcloud__Condition_Source_Kpi__r.cgcloud__BoM_Scope__c, &apos;Product&apos;)))</errorConditionFormula>
    <errorDisplayField>cgcloud__Condition_Source_Kpi__c</errorDisplayField>
    <errorMessage>The BOM Scope of Condition Source KPI must contain
&apos;Product&apos;.</errorMessage>
</ValidationRule>